fix: resolve variable expressions in EventNode event descriptions for correct signal routing; remove acceptingEventType from ProcessInstances and drop eventTypes from ProcessInstance API